<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mo-SAM DTS1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_kegiatan">Edit Kegiatan</string>
    <string name="action_check_in_kegiatan">Check In</string>
    <string name="action_check_out_kegiatan">Check Out</string>
    <string name="new_customer">New Customer</string>
    <string name="save_order">Save Order</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_input_kegiatan">Input Kegiatan</string>
    <string name="title_activity_input_order">Input Order</string>
    <string name="title_activity_history_kegiatan">History Kegiatan</string>
    <string name="title_activity_input_item">Input Item</string>
    <string name="title_activity_input_photo">Input Photo</string>
    <string name="title_activity_input__customer_">Input Customer</string>
    <string name="title_activity_master_customer">Master Customer</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="success">success</string>

    <string name="loading_data">Loading Data&#8230;</string>
    <string name="version_outdated">This Go-SAM version is outdated.\nPlease update to newer version.</string>
    <string name="google_play_service_version_outdated">Google Play Service needs update to continue.</string>
    <string name="current_version">Current Version : </string>
    <string name="new_version">New Version : </string>
    <string name="update">Update</string>
    <string name="update_google_play_service">Update Google Play Service</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="mandatory_symbol">*</string>

    <!--- Login -->
    <string name="initial">Initial</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- Main -->
    <string name="menu_main">Main</string>
    <string name="menu_home">Home</string>
    <string name="menu_data">Data</string>
    <string name="menu_history_kegiatan">History Kegiatan</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_option">Options</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Log Out</string>
    <string name="action_tambah_kegiatan">Buat Kegiatan</string>
    <string name="action_sync_kegiatan">Sikronisasi Data Kegiatan</string>

    <!-- Input Kegiatan -->
    <string name="customer_hint">Customer</string>
    <string name="pilih_tipe_kegiatan_hint">- Pilih Tipe Kegiatan -</string>
    <string name="pilih_jenis_kegiatan_hint">- Pilih Jenis Kegiatan -</string>
    <string name="tipe_kegiatan">Tipe Kegiatan</string>
    <string name="jenis_kegiatan">Jenis Kegiatan</string>
    <string name="mulai_kegiatan">Mulai Kegiatan</string>
    <string name="selesai_kegiatan">Selesai Kegiatan</string>
    <string name="subject">Subject</string>

    <!-- Select Customer -->
    <string name="cari_customer_txt">Cari Customer</string>
    <string name="button_cari_hint">Cari</string>
    <string name="set_lokasi_customer_txt">Set Lokasi Customer</string>
    <string name="select_customer_title">Pilih Customer</string>

    <!-- Input Customer -->
    <string name="pilih_city_customer">- Pilih City -</string>
    <string name="action_tambah_customer">Buat Customer Baru</string>

    <!-- Input Sales Order -->
    <string name="input_order_title">Input Sales Order</string>

    <!-- fragment sales header -->
    <string name="no_order_hint">No Order</string>
    <string name="no_customer_hint">No. Customer</string>
    <string name="nama_customer_hint">Nama Customer</string>
    <string name="alamat_kirim_1_hint">Alamat Kirim 1</string>
    <string name="alamat_kirim_2_hint">Alamat Kirim 2</string>
    <string name="kota_hint">Kota</string>
    <string name="promised_delivery_date_hint">Promised Delivery Date</string>
    <string name="pilih_promised_delivery_date_hint">- Promised Delivery Date -</string>
    <string name="syarat_pembayaran_hint">Syarat Pembayaran</string>
    <string name="tempo_hint">Tempo</string>
    <string name="pilih_tempo_hint">- Tempo Pembayaran -</string>
    <string name="kontak_hint">Kontak</string>
    <string name="npwp_hint">NPWP</string>
    <string name="telepon_hint">No. Telepon</string>

    <!-- fragment sales line -->
    <string name="tidak_ada_item">- Tidak ada item -</string>
    <string name="tambah_item_hint">Tambah</string>
    <string name="tambah_item_full_hint">Tambahkan Item</string>
    <string name="total_hint">Total</string>

    <!-- fragment sales total -->
    <string name="kirim_order_hint">Kirim Order</string>
    <string name="subtotal_hint">Subtotal</string>
    <string name="potongan_hint">Potongan Harga</string>
    <string name="dpp_hint">Dasar Pengenaan Pajak (DPP)</string>
    <string name="ppn_hint">PPn</string>
    <string name="total_bayar_hint">Total Bayar</string>
    <string name="catatan_hint">Catatan</string>

    <!-- input sales line activity -->
    <string name="input_item_title">Input Sales Line</string>
    <string name="edit_item_title">Edit Sales Line</string>
    <string name="cari_item_hint">Code / Description</string>
    <string name="item_code_hint">Code</string>
    <string name="item_description_hint">Description</string>
    <string name="item_price_hint">Price</string>
    <string name="item_price_list_hint">Price List NAV</string>
    <string name="item_quantity_hint">Quantity</string>
    <string name="item_satuan_hint">Satuan</string>
    <string name="item_discount_pct_hint">Disc. %</string>
    <string name="item_discount_value_hint">Disc. Value</string>
    <string name="item_subtotal_hint">Subtotal</string>
    <string name="action_delete_item">Hapus</string>

    <!-- Adapter List Customer -->
    <string name="action_lbl_edit_kegiatan">Edit Kegiatan</string>
    <string name="action_lbl_view_kegiatan">View Kegiatan</string>
    <string name="action_lbl_sales_order">Sales Order</string>
    <string name="action_lbl_photo">Photo</string>
    <string name="action_lbl_cancel">Cancel</string>
    <string name="action_lbl_alasan_cancel">Alasan Cancel</string>
    <string name="action_lbl_hasil">Hasil</string>

    <!-- Photo -->
    <string name="photo_title">Photo</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Simpan</string>
    <string name="keterangan">Keterangan</string>

    <!-- Master Customer -->
    <string name="action_sync_customer">Sikronisasi Data Customer</string>


</resources>
