<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.SplashScreen_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:paddingLeft="@dimen/dimen_20dp"
        android:paddingRight="@dimen/dimen_20dp"
        android:paddingStart="@dimen/dimen_20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:padding="@dimen/dimen_10dp"
            android:scaleType="fitStart"
            android:src="@drawable/datascrip_logo" />

        <TextView
            android:id="@+id/tx_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/app_name"
            android:textColor="@color/WHITE_DARK"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_google_play_service_version_outdated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_50dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/floating_hint_margin"
            android:text="@string/google_play_service_version_outdated"
            android:textColor="@color/colorLightYellow"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_update_google_play_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:text="@string/update_google_play_service"
            android:theme="@style/AppTheme.Button.Blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_version_outdated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_50dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/floating_hint_margin"
            android:text="@string/version_outdated"
            android:textColor="@color/WHITE"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_current_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/floating_hint_margin"
            android:text="@string/current_version"
            android:textColor="@color/WHITE"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_new_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/floating_hint_margin"
            android:text="@string/new_version"
            android:textColor="@color/WHITE"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:theme="@style/AppTheme.Button.Green" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_50dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/floating_hint_margin"
            android:text="@string/loading_data"
            android:textColor="@color/WHITE_DARK" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:theme="@style/AppTheme.YellowAccent" />
    </LinearLayout>

    <TextView
        android:id="@+id/tx_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/floating_hint_margin"
        android:text="@string/app_name"
        android:textColor="@color/WHITE" />
</RelativeLayout>

    <!--
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D5D5D5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:src="@drawable/datascrip_logo" />

        <com.salamander.mo_sam_div4_dts1.font.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="MoSAM DTS1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            custom:fonts="roboto_slab_bold" />

    </LinearLayout>
    -->