<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list_sales_line"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true"
        android:visibility="gone"
        tools:listitem="@layout/adapter_list_sales_line" />

    <LinearLayout
        android:id="@+id/ll_tidak_ada_data"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidak_ada_item"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_tambahkan_item"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/spinner_selector"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:text="@string/tambah_item_full_hint"
            android:textColor="@color/WHITE"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DARK"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_tambah_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="18dp"
            android:text="@string/tambah_item_hint"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/AppTheme.Button.Green" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingEnd="@dimen/dimen_5dp"
            android:paddingLeft="@dimen/dimen_5dp"
            android:paddingRight="@dimen/dimen_5dp"
            android:paddingStart="@dimen/dimen_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_hint"
                android:textColor="@color/WHITE" />

            <TextView
                android:id="@+id/tx_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/total_hint"
                android:textColor="@color/WHITE"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>